tests/fail/invalid_syntax_non_identifier.stderr
error: expected identifier
 --> tests/fail/invalid_syntax_non_identifier.rs:3:12
  |
3 | trait_mux!(123);
  |            ^^^
